fix 3/4 tests - typos

--- a/odot/app/views/todo_items/index.html.erb
+++ b/odot/app/views/todo_items/index.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @todo_list.title %></h1>
 
-<ul class="todo_items"
-  <% @todo_list.todo_items.each do |todo_item| %>
-  <li><%= todo_item.content %></li>
+<ul class="todo_items">
+  <% @todo_list.todo_items.each do |item| %>
+  <li><%= item.content %></li>
   <% end %>
 </ul>
 
